--- a/web/index.html
+++ b/web/index.html
@@ -47,16 +47,22 @@
   </head>
   <body>
     <script>
+      let useHtml = true;
+
       window.addEventListener("load", function (ev) {
-        // Download main.dart.js
         _flutter.loader.loadEntrypoint({
           serviceWorker: {
             serviceWorkerVersion: serviceWorkerVersion,
           },
           onEntrypointLoaded: function (engineInitializer) {
-            engineInitializer.initializeEngine().then(function (appRunner) {
-              appRunner.runApp();
-            });
+            let config = {
+              renderer: useHtml ? "html" : "canvaskit",
+            };
+            engineInitializer
+              .initializeEngine(config)
+              .then(function (appRunner) {
+                appRunner.runApp();
+              });
           },
         });
       });
